change json to display full product name instead of one word name

--- a/Word Similarity.ipynb
+++ b/Word Similarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_qs = 'marry bag'"
+    "input_qs = 'marry'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,11 +74,11 @@
     "            distance = nltk.edit_distance(input_qs, product_names[i])\n",
     "            product_df = product_df.append({'product': product_names[i], 'distance': distance}, ignore_index=True)\n",
     "    else: #if the input is one word\n",
-    "        one_word_names = one_word_names(product_names)\n",
-    "        for i in range(len(one_word_names)):\n",
-    "            one_word_names[i] = one_word_names[i].lower()\n",
-    "            distance = nltk.edit_distance(input_qs, one_word_names[i])\n",
-    "            product_df = product_df.append({'product': one_word_names[i], 'distance': distance}, ignore_index=True)\n",
+    "        one_word_name = one_word_names(product_names)\n",
+    "        for i in range(len(one_word_name)):\n",
+    "            one_word_name[i] = one_word_name[i].lower()\n",
+    "            distance = nltk.edit_distance(input_qs, one_word_name[i])\n",
+    "            product_df = product_df.append({'product': product_names[i], 'distance': distance}, ignore_index=True)\n",
     "    \n",
     "    #sort values based on distance\n",
     "    did_you_mean = product_df[product_df['distance']<4].sort_values('distance')\n",
@@ -102,20 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'data': [{'distance': 1.0, 'name': 'mary bag'},\n",
+       "  {'distance': 2.0, 'name': 'darly wallet'},\n",
        "  {'distance': 3.0, 'name': 'baby bag'},\n",
+       "  {'distance': 3.0, 'name': 'carla card wallet'},\n",
+       "  {'distance': 3.0, 'name': 'carol wallet'},\n",
        "  {'distance': 3.0, 'name': 'kara bag'},\n",
+       "  {'distance': 3.0, 'name': 'lady wallet'},\n",
+       "  {'distance': 3.0, 'name': 'mora wallet'},\n",
        "  {'distance': 3.0, 'name': 'tammy bag'}],\n",
-       " 'time': 0.09810506598698222}"
+       " 'time': 0.09307158069407251}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
