added docstring for similarity functions

--- a/Word Similarity.ipynb
+++ b/Word Similarity.ipynb
@@ -38,6 +38,10 @@
    "outputs": [],
    "source": [
     "def one_word_names(list_of_product_names):\n",
+    "    '''\n",
+    "    INPUT - list of product names\n",
+    "    OUTPUT - list product names without the type (bag / wallet, etc)\n",
+    "    '''\n",
     "    one_word_names = []\n",
     "    for name in product_names:\n",
     "        name_list = name.split(' ')\n",
@@ -65,6 +69,14 @@
    "outputs": [],
    "source": [
     "def compute_distance(input_qs, product_names):\n",
+    "    '''\n",
+    "    INPUT\n",
+    "    input_qs - string to be calculated\n",
+    "    product_names - list of product names\n",
+    "    \n",
+    "    OUTPUT\n",
+    "    dict_json - json contains data of product most similar to the input and time\n",
+    "    '''\n",
     "    start_time = time.clock()\n",
     "    product_df = pd.DataFrame()\n",
     "    #if the input is more than 1 word\n",
