--- a/Test Keras.ipynb
+++ b/Test Keras.ipynb
@@ -2,26 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\anaconda\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from keras.models import Sequential\n",
+    "#from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras.layers import Activation, Dropout, Flatten, Dense"
+    "from keras.layers import Activation, Dropout, Flatten, Dense\n",
+    "from keras import applications\n",
+    "#from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras import optimizers\n",
+    "from keras.models import Sequential, Model \n",
+    "from keras.layers import Dropout, Flatten, Dense, GlobalAveragePooling2D\n",
+    "from keras import backend as k \n",
+    "from keras.callbacks import ModelCheckpoint, LearningRateScheduler, TensorBoard, EarlyStopping\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#applying transfer learning\n",
+    "model = applications.VGG19(weights = \"imagenet\", include_top=False, input_shape = (224, 224, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Freeze first 5 layers.\n",
+    "for layer in model.layers[:5]:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding layers\n",
+    "x = model.output\n",
+    "x = Flatten()(x)\n",
+    "x = Dense(1024, activation=\"relu\")(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "x = Dense(1024, activation=\"relu\")(x)\n",
+    "predictions = Dense(62, activation=\"softmax\")(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_final = Model(input = model.input, output = predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_final.compile(loss = \"categorical_crossentropy\", optimizer = 'adam', metrics=[\"accuracy\"])"
    ]
   },
   {
@@ -34,11 +85,12 @@
     "        rescale=1./255,\n",
     "        shear_range=0.2,\n",
     "        zoom_range=0.2,\n",
+    "        rotation_range = 30,\n",
     "        horizontal_flip=True)\n",
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "    directory=\"img/train/\",\n",
-    "    target_size=(150, 150),\n",
+    "    target_size=(224, 224),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=16,\n",
     "    class_mode=\"categorical\",\n",
@@ -57,7 +109,7 @@
     "\n",
     "valid_generator = test_datagen.flow_from_directory(\n",
     "    directory=\"img/valid/\",\n",
-    "    target_size=(150, 150),\n",
+    "    target_size=(224, 224),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=16,\n",
     "    class_mode=\"categorical\",\n",
@@ -74,12 +126,40 @@
    "source": [
     "test_generator = test_datagen.flow_from_directory(\n",
     "    directory=\"img/test/\",\n",
-    "    target_size=(150, 150),\n",
+    "    target_size=(224, 224),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=1,\n",
     "    class_mode=None,\n",
     "    shuffle=False,\n",
     "    seed=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint = ModelCheckpoint(\"vgg19_1.h5\", monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', period=1)\n",
+    "early = EarlyStopping(monitor='val_acc', min_delta=0, patience=10, verbose=1, mode='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+    "STEP_SIZE_VALID=valid_generator.n//valid_generator.batch_size\n",
+    "\n",
+    "model_final.fit_generator(generator=train_generator,\n",
+    "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
+    "                    validation_data=valid_generator,\n",
+    "                    validation_steps=STEP_SIZE_VALID,\n",
+    "                    epochs=30,\n",
+    "                    callbacks = [checkpoint, early]\n",
     ")"
    ]
   },
@@ -95,9 +175,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "sess = tf.Session(config=tf.ConfigProto(log_device_placement=True))"
+    "model_final.save('image_model.hdf5')"
    ]
   },
   {
@@ -106,7 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sess"
+    "model_json = model_final.to_json()\n",
+    "with open(\"model_image.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)"
    ]
   },
   {
@@ -115,29 +238,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "model.add(Conv2D(32, (3, 3), input_shape=(3,150, 150)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(32, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(64, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
-    "model.add(Dense(64))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(62))\n",
-    "model.add(Activation('softmax'))\n",
-    "\n",
-    "model.compile(loss='sparse_categorical_crossentropy',\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'])"
+    "model_final.save_weights(\"image_model_weights.h5\")\n",
+    "print(\"Saved model to disk\")"
    ]
   },
   {
@@ -146,30 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "\n",
-    "# First convolutional layer with max pooling\n",
-    "model.add(Conv2D(20, (5, 5), padding=\"same\", input_shape=(3,150, 150), activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "# Second convolutional layer with max pooling\n",
-    "model.add(Conv2D(50, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(100, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "\n",
-    "# Hidden layer with 500 nodes\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(500, activation=\"relu\"))\n",
-    "\n",
-    "# Output layer with 32 nodes (one for each possible letter/number we predict)\n",
-    "# model.add(Dense(32, activation=\"softmax\"))\n",
-    "model.add(Dense(62, activation=\"softmax\"))\n",
-    "\n",
-    "# Ask Keras to build the TensorFlow model behind the scenes\n",
-    "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
+    "model_final.save_weights(\"vgg16_1.h5\")\n",
+    "print(\"Saved model to disk\")"
    ]
   },
   {
@@ -178,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 16"
+    "from keras.models import model_from_json"
    ]
   },
   {
@@ -187,14 +267,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
-    "STEP_SIZE_VALID=valid_generator.n//valid_generator.batch_size\n",
-    "model.fit_generator(generator=train_generator,\n",
-    "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
-    "                    validation_data=valid_generator,\n",
-    "                    validation_steps=STEP_SIZE_VALID,\n",
-    "                    epochs=20\n",
-    ")"
+    "json_file = open('model_image.json', 'r')\n",
+    "loaded_model_json = json_file.read()\n",
+    "json_file.close()\n",
+    "loaded_model = model_from_json(loaded_model_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load weights into new model\n",
+    "loaded_model.load_weights(\"image_model_weights_2.h5\")\n",
+    "print(\"Loaded model from disk\")"
    ]
   },
   {
@@ -204,35 +291,11 @@
    "outputs": [],
    "source": [
     "test_generator.reset()\n",
-    "pred=model.predict_generator(test_generator,verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_class_indices=np.argmax(pred,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pred=loaded_model.predict_generator(test_generator,verbose=1)\n",
+    "predicted_class_indices=np.argmax(pred,axis=1)\n",
     "labels = (train_generator.class_indices)\n",
     "labels = dict((v,k) for k,v in labels.items())\n",
-    "predictions = [labels[k] for k in predicted_class_indices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "predictions = [labels[k] for k in predicted_class_indices]\n",
     "\n",
     "filenames=test_generator.filenames\n",
     "results=pd.DataFrame({\"Filename\":filenames,\n",
@@ -253,6 +316,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "results[['directory', 'file']] = results.Filename.str.split(\"\\\\\", expand = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.to_csv('test_keras.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(results.Predictions == results.directory).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -281,22 +371,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "train_datagen = ImageDataGenerator(\n",
-    "        rescale=1./255,\n",
-    "        shear_range=0.2,\n",
-    "        zoom_range=0.2,\n",
-    "        horizontal_flip=True)\n",
-    "\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    directory=\"img/train/\",\n",
-    "    target_size=(224, 224),\n",
-    "    color_mode=\"rgb\",\n",
-    "    batch_size=16,\n",
-    "    class_mode=\"categorical\",\n",
-    "    shuffle=True,\n",
-    "    seed=42\n",
-    ")"
+    "from PIL import Image\n",
+    "from skimage import transform"
    ]
   },
   {
@@ -305,17 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
-    "\n",
-    "valid_generator = test_datagen.flow_from_directory(\n",
-    "    directory=\"img/valid/\",\n",
-    "    target_size=(224, 224),\n",
-    "    color_mode=\"rgb\",\n",
-    "    batch_size=16,\n",
-    "    class_mode=\"categorical\",\n",
-    "    shuffle=True,\n",
-    "    seed=42\n",
-    ")"
+    "np_image = Image.open('img/test/ADELLE BAG/ADELLE BAG_180304_0031.JPG')"
    ]
   },
   {
@@ -324,15 +398,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_generator = test_datagen.flow_from_directory(\n",
-    "    directory=\"img/test/\",\n",
-    "    target_size=(224, 224),\n",
-    "    color_mode=\"rgb\",\n",
-    "    batch_size=1,\n",
-    "    class_mode=None,\n",
-    "    shuffle=False,\n",
-    "    seed=42\n",
-    ")"
+    "test_image = np.array(np_image)/255\n",
+    "test_image = transform.resize(test_image, (3,150,150))\n",
+    "#test_image = test_image.reshape(test_image.shape[2], test_image.shape[0], test_image.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_image = np.expand_dims(test_image, axis = 0)\n",
+    "test_list = loaded_model.predict(test_image).tolist()"
    ]
   },
   {
@@ -341,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)"
+    "loaded_model.predict_classes(test_list)"
    ]
   },
   {
@@ -350,37 +435,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
+    "def load(filename):\n",
+    "   np_image = Image.open(filename)\n",
+    "   np_image = np.array(np_image).astype('float32')/255\n",
+    "   np_image = transform.resize(np_image, (3, 150, 150))\n",
+    "   np_image = np.expand_dims(np_image, axis=0)\n",
+    "   return np_image\n",
     "\n",
-    "# First convolutional layer with max pooling\n",
-    "model.add(Conv2D(20, (5, 5), padding=\"same\", input_shape=(3,224, 224), activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "# Second convolutional layer with max pooling\n",
-    "model.add(Conv2D(50, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(75, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(100, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "model.add(Conv2D(100, (5, 5), padding=\"same\", activation=\"relu\"))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Hidden layer with 500 nodes\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(500, activation=\"relu\"))\n",
-    "\n",
-    "# Output layer with 32 nodes (one for each possible letter/number we predict)\n",
-    "# model.add(Dense(32, activation=\"softmax\"))\n",
-    "model.add(Dense(62, activation=\"softmax\"))\n",
-    "\n",
-    "# Ask Keras to build the TensorFlow model behind the scenes\n",
-    "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
+    "image = load('img/test/ADELLE BAG/ADELLE BAG_180304_0031.JPG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = loaded_model.predict(image).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probs = []\n",
+    "for i in test_list:\n",
+    "    for j in i:\n",
+    "        probs.append(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_labels = list(labels.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame({'label': test_labels, 'probs': probs})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.sort_values('probs', ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df.sort_values('probs', ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test 1: Adam\n",
+    "Epoch = 10, loss = categorical_crossentropy, metrics = accuracy  \n",
+    "loss: 0.9872 - acc: 0.7294 - val_loss: 3.0550 - val_acc: 0.406"
    ]
   },
   {
@@ -395,7 +532,7 @@
     "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
     "                    validation_data=valid_generator,\n",
     "                    validation_steps=STEP_SIZE_VALID,\n",
-    "                    epochs=10\n",
+    "                    epochs=20\n",
     ")"
    ]
   }
