adding seed on top for reproducability

--- a/Test Keras.ipynb
+++ b/Test Keras.ipynb
@@ -6,9 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "#seed\n",
+    "from numpy.random import seed\n",
+    "seed(1)\n",
+    "from tensorflow import set_random_seed\n",
+    "set_random_seed(2)\n",
+    "\n",
+    "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "#from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
@@ -90,7 +97,7 @@
     "\n",
     "train_generator = train_datagen.flow_from_directory(\n",
     "    directory=\"img/train/\",\n",
-    "    target_size=(224, 224),\n",
+    "    target_size=(150, 150),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=16,\n",
     "    class_mode=\"categorical\",\n",
@@ -109,7 +116,7 @@
     "\n",
     "valid_generator = test_datagen.flow_from_directory(\n",
     "    directory=\"img/valid/\",\n",
-    "    target_size=(224, 224),\n",
+    "    target_size=(150, 150),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=16,\n",
     "    class_mode=\"categorical\",\n",
@@ -126,7 +133,7 @@
    "source": [
     "test_generator = test_datagen.flow_from_directory(\n",
     "    directory=\"img/test/\",\n",
-    "    target_size=(224, 224),\n",
+    "    target_size=(150, 150),\n",
     "    color_mode=\"rgb\",\n",
     "    batch_size=1,\n",
     "    class_mode=None,\n",
@@ -168,64 +175,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_final.save('image_model.hdf5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model_json = model_final.to_json()\n",
     "with open(\"model_image.json\", \"w\") as json_file:\n",
@@ -257,9 +206,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from keras.models import model_from_json"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -308,15 +255,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "results[['directory', 'file']] = results.Filename.str.split(\"\\\\\", expand = True)"
    ]
   },
@@ -343,44 +281,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "from skimage import transform"
+    "df_label = pd.DataFrame(list(labels.values()), columns = ['class'])"
    ]
   },
   {
@@ -389,7 +291,213 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np_image = Image.open('img/test/ADELLE BAG/ADELLE BAG_180304_0031.JPG')"
+    "df_label.to_csv('labels.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing import image\n",
+    "from keras.applications.vgg19 import preprocess_input\n",
+    "from keras.models import model_from_json\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = 'insta_test/test3.png'\n",
+    "img = image.load_img(image_path, target_size=(150, 150))\n",
+    "x = image.img_to_array(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x.reshape(150,150,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.1.6'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "keras.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.10.0'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensorflow.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve(image_path, topk = 10):\n",
+    "    time_start = time.clock()\n",
+    "    #load model\n",
+    "    json_file = open('model_image.json', 'r')\n",
+    "    loaded_model_json = json_file.read()\n",
+    "    json_file.close()\n",
+    "    loaded_model = model_from_json(loaded_model_json)\n",
+    "    #load weights\n",
+    "    loaded_model.load_weights(\"image_model_weights_2.h5\")\n",
+    "    #load labels\n",
+    "    df_label = pd.read_csv('labels.csv')\n",
+    "    labels = df_label['class'].tolist()\n",
+    "    #load and preprocess image\n",
+    "    img = image.load_img(image_path, target_size=(150, 150))\n",
+    "    x = image.img_to_array(img)\n",
+    "    x = np.expand_dims(x, axis=0)\n",
+    "    x = preprocess_input(x)\n",
+    "    x = x/255\n",
+    "    preds = loaded_model.predict(x,)\n",
+    "    test_list = preds.tolist()\n",
+    "    probs = []\n",
+    "    for i in test_list:\n",
+    "        for j in i:\n",
+    "            probs.append(j)\n",
+    "    test_df = pd.DataFrame({'label': labels, 'probs': probs})\n",
+    "    test_df = test_df.sort_values('probs', ascending = False)[:topk]\n",
+    "    labels_use = test_df['label'].tolist()\n",
+    "    probs_use = test_df['probs'].tolist()\n",
+    "    dict_json = dict()\n",
+    "    list_probs = []\n",
+    "    for i in range(len(labels_use)):\n",
+    "        dict_test = dict()\n",
+    "        dict_test['name'] = labels_use[i]\n",
+    "        dict_test['probs'] = probs_use[i]\n",
+    "        list_probs.append(dict_test)\n",
+    "    dict_json['data'] = list_probs\n",
+    "    dict_json['time'] = time.clock()-time_start\n",
+    "    dict_json = json.dumps(dict_json)\n",
+    "    return dict_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"data\": [{\"probs\": 0.7564043998718262, \"name\": \"TRACIE BAG\"}, {\"probs\": 0.052824195474386215, \"name\": \"JAM 8471\"}, {\"probs\": 0.04148963838815689, \"name\": \"LOLI BAG\"}, {\"probs\": 0.029552597552537918, \"name\": \"JAM 8069\"}, {\"probs\": 0.027224337682127953, \"name\": \"KACAMATA 9127\"}, {\"probs\": 0.020686805248260498, \"name\": \"LILBOW BAG\"}, {\"probs\": 0.02042664960026741, \"name\": \"JAM 8191\"}, {\"probs\": 0.009263462387025356, \"name\": \"MORA WALLET\"}, {\"probs\": 0.006083757616579533, \"name\": \"PAULA BAG\"}, {\"probs\": 0.004621386528015137, \"name\": \"JAM MALE 8036\"}], \"time\": 3.3894916906865546}'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solve(image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels_use = df['label'].tolist()\n",
+    "probs_use = df['probs'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_json = dict()\n",
+    "list_probs = []\n",
+    "for i in range(len(labels_use)):\n",
+    "    dict_test = dict()\n",
+    "    dict_test['name'] = labels_use[i]\n",
+    "    dict_test['probs'] = probs_use[i]\n",
+    "    list_probs.append(dict_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'TRACIE BAG', 'probs': 0.7564043998718262},\n",
+       " {'name': 'JAM 8471', 'probs': 0.052824195474386215},\n",
+       " {'name': 'LOLI BAG', 'probs': 0.04148963838815689},\n",
+       " {'name': 'JAM 8069', 'probs': 0.029552597552537918},\n",
+       " {'name': 'KACAMATA 9127', 'probs': 0.027224337682127953},\n",
+       " {'name': 'LILBOW BAG', 'probs': 0.020686805248260498},\n",
+       " {'name': 'JAM 8191', 'probs': 0.02042664960026741},\n",
+       " {'name': 'MORA WALLET', 'probs': 0.009263462387025356},\n",
+       " {'name': 'PAULA BAG', 'probs': 0.006083757616579533},\n",
+       " {'name': 'JAM MALE 8036', 'probs': 0.004621386528015137}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_json['data'] = list_probs"
    ]
   },
   {
@@ -398,26 +506,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_image = np.array(np_image)/255\n",
-    "test_image = transform.resize(test_image, (3,150,150))\n",
-    "#test_image = test_image.reshape(test_image.shape[2], test_image.shape[0], test_image.shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_image = np.expand_dims(test_image, axis = 0)\n",
-    "test_list = loaded_model.predict(test_image).tolist()"
+    "img = image.load_img(image_path, target_size=(150, 150))\n",
+    "x = image.img_to_array(img)\n",
+    "x = np.expand_dims(x, axis=0)\n",
+    "x = preprocess_input(x)\n",
+    "x = x/255"
    ]
   },
   {
@@ -426,7 +519,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model.predict_classes(test_list)"
+    "preds = loaded_model.predict(x,)\n",
+    "pred_classes = np.argmax(preds)\n",
+    "print(preds)\n",
+    "print(pred_classes)"
    ]
   },
   {
@@ -435,23 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load(filename):\n",
-    "   np_image = Image.open(filename)\n",
-    "   np_image = np.array(np_image).astype('float32')/255\n",
-    "   np_image = transform.resize(np_image, (3, 150, 150))\n",
-    "   np_image = np.expand_dims(np_image, axis=0)\n",
-    "   return np_image\n",
-    "\n",
-    "image = load('img/test/ADELLE BAG/ADELLE BAG_180304_0031.JPG')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_list = loaded_model.predict(image).tolist()"
+    "test_list = preds.tolist()"
    ]
   },
   {
@@ -482,15 +562,6 @@
    "outputs": [],
    "source": [
     "test_df = pd.DataFrame({'label': test_labels, 'probs': probs})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_list"
    ]
   },
   {
